Scrollbar style fixes
-Make scrollbar top and bottom smoother
-Identify two style bugs with scrollbar to be solved later

--- a/public/css/memo-drawings.css
+++ b/public/css/memo-drawings.css
@@ -79,7 +79,7 @@
 
     background-color: var(--memo-text-color);
 
-    clip-path: circle(50% at 50% 100%)
+    clip-path: circle(65% at 50% 120%)
 }
 
 /* This one's easy, it's just a rectangle */
@@ -99,5 +99,5 @@
 
     background-color: var(--memo-text-color);
 
-    clip-path: circle(50% at 50% 0%)
+    clip-path: circle(65% at 50% -20%)
 }
